--- a/books/LaunchScreen.storyboard
+++ b/books/LaunchScreen.storyboard
@@ -46,19 +46,18 @@
         <scene sceneID="m4A-vE-w1L">
             <objects>
                 <tableViewController storyboardIdentifier="bookTable" definesPresentationContext="YES" id="Brz-Ma-6yM" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="none" rowHeight="92" sectionHeaderHeight="28" sectionFooterHeight="28" id="7Nz-Gt-Ewv">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="ghb-6F-nzT">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <searchBar key="tableFooterView" contentMode="redraw" placeholder="Search" id="gqm-vS-wUY">
+                        <view key="tableFooterView" contentMode="scaleToFill" id="wh4-yQ-goG">
                             <rect key="frame" x="0.0" y="64" width="600" height="44"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            <textInputTraits key="textInputTraits"/>
-                        </searchBar>
-                        <sections/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </view>
                         <connections>
-                            <outlet property="dataSource" destination="Brz-Ma-6yM" id="HN6-FD-XTy"/>
-                            <outlet property="delegate" destination="Brz-Ma-6yM" id="Jtt-K4-U5h"/>
+                            <outlet property="dataSource" destination="Brz-Ma-6yM" id="tum-8F-55i"/>
+                            <outlet property="delegate" destination="Brz-Ma-6yM" id="Kah-W9-yua"/>
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="aZw-H1-2dY">
