--- a/books/Base.lproj/Main.storyboard
+++ b/books/Base.lproj/Main.storyboard
@@ -92,7 +92,7 @@
                     <navigationItem key="navigationItem" id="YRx-69-dRa">
                         <barButtonItem key="rightBarButtonItem" systemItem="edit" id="AXa-H3-O12">
                             <connections>
-                                <segue destination="gP2-fQ-9M2" kind="show" identifier="editBookSegue" id="bfD-cG-YZ2"/>
+                                <segue destination="HZV-3e-s0a" kind="presentation" identifier="editBookSegue" id="bfD-cG-YZ2"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -110,6 +110,7 @@
         <!--Edit Book-->
         <scene sceneID="Ko7-yo-BH0">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cBb-Vl-RIZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="gP2-fQ-9M2" customClass="EditBookViewController" customModule="Reading_List" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="f9C-6w-24f"/>
@@ -120,11 +121,24 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Edit Book" id="Eyo-Wt-Ean"/>
+                    <navigationItem key="navigationItem" title="Edit Book" id="Eyo-Wt-Ean">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="2tR-qr-fIc">
+                            <connections>
+                                <action selector="cancelButtonWasPressed:" destination="gP2-fQ-9M2" id="d0b-H9-oMg"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="gdQ-U4-sh2">
+                            <connections>
+                                <action selector="doneButtonWasPressed:" destination="gP2-fQ-9M2" id="5VG-4H-gd3"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="doneButton" destination="gdQ-U4-sh2" id="Wat-qO-5mK"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="cBb-Vl-RIZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2326" y="871"/>
+            <point key="canvasLocation" x="-1638" y="852"/>
         </scene>
         <!--Add New Book-->
         <scene sceneID="25v-fZ-xbG">
@@ -152,7 +166,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ano-2E-9eJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1622" y="858"/>
+            <point key="canvasLocation" x="-810" y="858"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="zdk-AE-L8G">
@@ -392,6 +406,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="akl-GW-6eJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1939" y="-11"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="n9j-O6-edZ">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="HZV-3e-s0a" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="HCQ-fJ-I4l">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="gP2-fQ-9M2" kind="relationship" relationship="rootViewController" id="Uq6-4x-iGd"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ko9-f4-aEi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2314" y="852"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
