--- a/books/Base.lproj/Main.storyboard
+++ b/books/Base.lproj/Main.storyboard
@@ -92,7 +92,7 @@
                     <navigationItem key="navigationItem" id="YRx-69-dRa">
                         <barButtonItem key="rightBarButtonItem" systemItem="edit" id="AXa-H3-O12">
                             <connections>
-                                <segue destination="HZV-3e-s0a" kind="presentation" identifier="editBookSegue" id="bfD-cG-YZ2"/>
+                                <segue destination="hSG-hA-aNk" kind="presentation" identifier="editBookSegue" id="bfD-cG-YZ2"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -105,68 +105,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="i9A-VS-Eof" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-3013" y="852"/>
-        </scene>
-        <!--Edit Book-->
-        <scene sceneID="Ko7-yo-BH0">
-            <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="cBb-Vl-RIZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController id="gP2-fQ-9M2" customClass="EditBookViewController" customModule="Reading_List" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="f9C-6w-24f"/>
-                        <viewControllerLayoutGuide type="bottom" id="khP-od-Jju"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="qfX-42-7bW">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" title="Edit Book" id="Eyo-Wt-Ean">
-                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="2tR-qr-fIc">
-                            <connections>
-                                <action selector="cancelButtonWasPressed:" destination="gP2-fQ-9M2" id="d0b-H9-oMg"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="gdQ-U4-sh2">
-                            <connections>
-                                <action selector="doneButtonWasPressed:" destination="gP2-fQ-9M2" id="5VG-4H-gd3"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
-                    <connections>
-                        <outlet property="doneButton" destination="gdQ-U4-sh2" id="Wat-qO-5mK"/>
-                    </connections>
-                </viewController>
-            </objects>
-            <point key="canvasLocation" x="-1638" y="852"/>
-        </scene>
-        <!--Add New Book-->
-        <scene sceneID="25v-fZ-xbG">
-            <objects>
-                <viewController id="yLX-6o-qN7" customClass="CreateBookViewController" customModule="Reading_List" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="u4K-nk-gaa"/>
-                        <viewControllerLayoutGuide type="bottom" id="FY2-vS-ice"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="oqw-3f-s80">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" title="Add New Book" id="8EQ-Fj-MgA">
-                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="XsD-I0-xq4">
-                            <connections>
-                                <action selector="doneWasPressed:" destination="yLX-6o-qN7" id="i2p-tG-f0C"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
-                    <connections>
-                        <outlet property="doneButton" destination="XsD-I0-xq4" id="mPj-CH-CO7"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Ano-2E-9eJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-810" y="858"/>
+            <point key="canvasLocation" x="-3275" y="772"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="zdk-AE-L8G">
@@ -182,7 +121,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="o6a-7D-sZf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-3742" y="852"/>
+            <point key="canvasLocation" x="-4185" y="772"/>
         </scene>
         <!--Split View Controller-->
         <scene sceneID="E7I-JX-wrl">
@@ -273,7 +212,7 @@
                         </segmentedControl>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="ZXY-qd-kDE">
                             <connections>
-                                <segue destination="IA5-Oq-XRy" kind="presentation" identifier="addBook" modalPresentationStyle="formSheet" id="pnq-JL-b7O"/>
+                                <segue destination="14e-go-fQY" kind="presentation" identifier="addBook" modalPresentationStyle="formSheet" id="pnq-JL-b7O"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -301,129 +240,21 @@
             </objects>
             <point key="canvasLocation" x="-4185" y="-11"/>
         </scene>
-        <!--Search Results View Controller-->
-        <scene sceneID="eFJ-kC-eB4">
+        <!--AddBook-->
+        <scene sceneID="QRP-V7-GcC">
             <objects>
-                <viewController modalTransitionStyle="flipHorizontal" id="eTM-OJ-MME" customClass="SearchResultsViewController" customModule="Reading_List" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="5Z0-0O-1bl"/>
-                        <viewControllerLayoutGuide type="bottom" id="wNp-l3-pkc"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="1Sa-X1-LI1">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Searching for Books" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sCo-yn-uou">
-                                <rect key="frame" x="20" y="252.5" width="560" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="sSV-6S-uTM">
-                                <rect key="frame" x="281" y="281" width="37" height="37"/>
-                                <color key="color" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                            </activityIndicatorView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="sSV-6S-uTM" firstAttribute="centerX" secondItem="1Sa-X1-LI1" secondAttribute="centerX" id="LDz-dr-KGV"/>
-                            <constraint firstItem="sSV-6S-uTM" firstAttribute="centerY" secondItem="1Sa-X1-LI1" secondAttribute="centerY" id="VAW-jE-h72"/>
-                            <constraint firstItem="sSV-6S-uTM" firstAttribute="top" secondItem="sCo-yn-uou" secondAttribute="bottom" constant="8" id="Vjq-V3-pTU"/>
-                            <constraint firstItem="sCo-yn-uou" firstAttribute="leading" secondItem="1Sa-X1-LI1" secondAttribute="leadingMargin" id="bAY-Po-hWZ"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="sCo-yn-uou" secondAttribute="trailing" id="zmI-x6-QvP"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" id="4hc-nu-uIc"/>
-                    <connections>
-                        <outlet property="spinner" destination="sSV-6S-uTM" id="wmz-J1-aqx"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="7gT-5z-qMi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewControllerPlaceholder storyboardName="AddBook" id="14e-go-fQY" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jhl-YH-8RB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1156" y="-3"/>
+            <point key="canvasLocation" x="-2880.5" y="-11"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="D1O-n3-5lh">
+        <!--EditBook-->
+        <scene sceneID="DkH-3o-pb3">
             <objects>
-                <navigationController definesPresentationContext="YES" id="IA5-Oq-XRy" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="IbE-W0-H7w">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="MGK-ee-YjP" kind="relationship" relationship="rootViewController" id="hDe-3j-zdE"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="yh0-5m-Yqk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewControllerPlaceholder storyboardName="EditBook" id="hSG-hA-aNk" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="32B-vE-unn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2658" y="-11"/>
-        </scene>
-        <!--Scan Barcode-->
-        <scene sceneID="b2c-9w-e3P">
-            <objects>
-                <viewController id="MGK-ee-YjP" customClass="ScannerViewController" customModule="Reading_List" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="8uf-ya-Hu9"/>
-                        <viewControllerLayoutGuide type="bottom" id="za8-pr-DLM"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Li1-Bc-Q61">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pEt-SH-GKe">
-                                <rect key="frame" x="0.0" y="44" width="600" height="556"/>
-                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                            </view>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="pEt-SH-GKe" firstAttribute="top" secondItem="8uf-ya-Hu9" secondAttribute="bottom" id="ILv-3t-B85"/>
-                            <constraint firstItem="za8-pr-DLM" firstAttribute="top" secondItem="pEt-SH-GKe" secondAttribute="bottom" id="KvY-GZ-7e3"/>
-                            <constraint firstAttribute="trailing" secondItem="pEt-SH-GKe" secondAttribute="trailing" id="eOQ-ru-KNI"/>
-                            <constraint firstItem="pEt-SH-GKe" firstAttribute="leading" secondItem="Li1-Bc-Q61" secondAttribute="leading" id="hjg-LJ-wbA"/>
-                        </constraints>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="C92-un-dfo"/>
-                    <navigationItem key="navigationItem" title="Scan Barcode" id="UpE-wp-wNv">
-                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="CFW-rL-dNB">
-                            <connections>
-                                <action selector="cancelWasPressed:" destination="MGK-ee-YjP" id="74p-1h-9IY"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" title="Manual" id="oSL-w5-bNs">
-                            <connections>
-                                <segue destination="yLX-6o-qN7" kind="show" id="L7s-ov-WzD"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
-                    <connections>
-                        <outlet property="cameraPreviewPlaceholder" destination="pEt-SH-GKe" id="iAc-8o-ged"/>
-                        <segue destination="eTM-OJ-MME" kind="show" identifier="isbnDetectedSegue" id="AvE-Bh-e7Y">
-                            <nil key="action"/>
-                        </segue>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="akl-GW-6eJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1939" y="-11"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="n9j-O6-edZ">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="HZV-3e-s0a" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="HCQ-fJ-I4l">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="gP2-fQ-9M2" kind="relationship" relationship="rootViewController" id="Uq6-4x-iGd"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Ko9-f4-aEi" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-2314" y="852"/>
+            <point key="canvasLocation" x="-2671.5" y="772"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
